2005-03-31  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* text.C (parse_text): Really fix \start_of_appendix output

2005-03-27  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* tex2lyx.C (read_syntaxfile): Don't use racy test with IsFileReadable
	* tex2lyx.C (tex2lyx): ditto, and don't use fs::is_writable (it
	returns false if the file does not exist on solaris)

2005-03-18  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* text.C (parse_text): Fix \start_of_appendix output

2005-03-11  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* table.C (parse_table): handle nested tables
	* texparser.[Ch] (verbatimEnvironment): new

2005-03-07  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* table.C (verbose_valign): new
	* table.C (string2int): remove, use convert<int>() instead since the
	default value is always 0 and this is also the default of
	convert<int>().
	* table.C (ci2special): new
	* table.C (handle_colalign): handle b{}, p{} and m{} correctly
	* table.C (handle_colalign): fix >{\raggedleft} and >{\raggedright}
	(they were swapped)
	* table.C (handle_colalign): handle >{\centering}
	* table.C (handle_colalign): handle <{}, *{}, @{} and !{}
	* table.C (fix_colalign): new
	* table.C (handle_tabular): fix multicolumns with vertical lines

2005-03-05  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* text.C (output_command_layout): Use parse_text instead of
	parse_text_in_inset to avoid creating a new context
	* text.C (parse_text): translate \thanks to footnote in title layouts

2005-02-25  Angus Leeming  <leeming@lyx.org>

	* context.h: declare as "class Font" rather than "struct Font".
	Ditto "class Context".

	* table.C: declare as "class ColInfo" rather than "struct ColInfo".
	Ditto "class RowInfo" and "class CellInfo".

	Changes to make MSVC agree to link the code.

2005-02-05  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* context.C (begin_deeper, end_deeper): adjust output to LyX
	* preamble.C (h_output_changes): new